@@ -1,3 +1,8 @@
+2011-01-31  Janus Weil  <janus@gcc.gnu.org>
+
+	PR fortran/47455
+	* gfortran.dg/typebound_call_19.f03: New.
+
 2011-01-31  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/47416
